Bump POM dependencies