@@ -4,7 +4,7 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.Charset;
 import java.util.concurrent.Callable;
 
@@ -60,7 +60,7 @@ public abstract class OnlineDict<T> implements Callable<T> {
 
     protected String fetch(String url) throws IOException
     {
-        var connection = (HttpURLConnection)new URL(url).openConnection();
+        var connection = (HttpURLConnection)URI.create(url).toURL().openConnection();
         connection.setConnectTimeout(CONNECTION_CONNECT_TIMEOUT_MSEC);
         connection.setReadTimeout(CONNECTION_READ_TIMEOUT_MSEC);
         connection.setInstanceFollowRedirects(true);
